# ChessAnalysis

./: LICENSE  README.md  fetch_games.py  game_viewer.py  pyproject.toml  settings.json  settings.py
acco/: __init__.py  fetch_games.py  game_viewer.py  init_database.py  settings.py
acco/resources/: deepcroaker_games.db  settings.json
