[build-system]
requires = [
    "setuptools>=80.8.0", 
    "wheel",
    "python-chess"
]
build-backend = "setuptools.build_meta"

[project]
name = "acco"
version = "0.1.0" # very early alpha
description = "A Chess.com game viewer and analysis tool (anti-chess-cheating-ordinance)"
readme = "README.md"
requires-python = ">=3.8" 
license = {text = "MIT License. See LICENSE file."} 
authors = [
  {name = "Will English", email = "me@willenglish.tech"}, 
]
keywords = ["chess", "analysis", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]


dependencies = [
"requests",
"Pillow",
"matplotlib",
"python-chess",
"rlPyCairo",
"svglib",
"reportlab"
# cairocffi
# ...
#    requests
# Pillow>=9.0
# numpy
# chess>=1.9
# # cairosvg # No longer used
# svglib>=1.5
# reportlab>=4.0
# appdirs>=1.4.4
# python-chess
# svglib
]


[project.urls]
"Homepage" = "https://github.com/dubascudes/acco"
